<resources>
    <string name="app_name">H4NGOUT</string>

    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up_title">Sign Up</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="create_event">Create Event</string>
    <string name="preferences">Preferences</string>
    <string name="use_my_location">Use my location</string>
    <string name="specify_location">Specify location</string>
    <string name="h4ngout">H4NGOUT</string>
    <string name="invite">Invite</string>
    <string name="invited">Invited:</string>
    <string name="select_location">Select Location</string>
    <string name="my_events">My Events</string>
    <string name="finish">Finish</string>
    <string name="my_invites">My Invites</string>
    <string name="search_availability">Search Availability</string>
    <string name="select_user">Select user</string>
    <string name="selected">Selected:</string>
    <string name="my_groups">My Groups</string>
    <string name="title_activity_test">Test</string>
    <string name="past_events">Past Events</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings from Lynda.com Sign In example -->
    <string name="status_signedin">Signed In</string>
    <string name="status_notsignedin">Not Signed In</string>
    <string name="status_notconnected">Not Connected</string>
    <string name="status_nullresult">Null Result</string>
    <string name="status_signincancelled">Sign In Cancelled</string>
    <string name="status_signinfail">Sign In Failed</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enter">Enter</string>
    <string name="title_activity_events_list">EventsList</string>
</resources>
