<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jr.h4ngout.CreateEvent1">

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="268dp"
        android:onClick="creatEvent2"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="286dp"
        android:layout_height="78dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="34dp"
        android:text="@string/create_event"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:layout_marginEnd="122dp"
        android:layout_marginStart="123dp"
        android:text="@string/preferences"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="49dp"
        android:text="@string/use_my_location"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:layout_marginStart="13dp"
        android:text="@string/specify_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="293dp"
        android:layout_height="32dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

</android.support.constraint.ConstraintLayout>
