<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context="jr.h4ngout.Availability1">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="286dp"
        android:layout_height="94dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="34dp"
        android:text="@string/search_availability"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:layout_marginEnd="122dp"
        android:layout_marginStart="123dp"
        android:text="@string/select_user"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <SearchView
        android:id="@+id/searchView3"
        android:layout_width="297dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_marginEnd="111dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="41dp"
        android:text="@string/selected"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView3" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginEnd="124dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="28dp"
        android:text="Person1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginEnd="124dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="10dp"
        android:text="Person2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <Button
        android:id="@+id/button27"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        android:text="X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/searchView3" />

    <Button
        android:id="@+id/button28"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="268dp"
        android:onClick="availability2"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>
